# preval

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.ps1  build.sh  compiler.rs  env.d.ts  eval.ir  goal.pv  hello_world.asm  ir.ir  main copy.pv  main.pv  main.pvc  mynative.c  mynative.exp  mynative.lib  out  out.pvc  out.s  preval.h  print.c  print.exp  print.lib  runtime.c  test.txt  vm.rs
.zed/: debug.json
interpreter/: Cargo.toml
interpreter/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: error.rs  lib.rs  tokeniser.rs
lib/src/ir/: access.rs  block.rs  call.rs  conditional.rs  error.rs  generics.rs  guard.rs  index.rs  initialize_struct.rs  is.rs  literal.rs  mod.rs  printing.rs  returns.rs  to_ir.rs  variable.rs  variable_declaration.rs
lib/src/parser/: expression.rs  mod.rs  module.rs  typ.rs  utility.rs
lib/src/passes/: mod.rs  old_type_check_expr.rs  remove_unused.rs  type_check_expr.rs
lib/src/typ/: error.rs  mod.rs  old.rs
lib/src/value/: mod.rs  native.rs  primitive.rs  runtime_type.rs  structure.rs  typ.rs  value.rs
lib/src/vm/: mod.rs
lib/src/vm/operation/: access.rs  call.rs  guard_phi.rs  index.rs  initialize_struct.rs  is.rs  load_local.rs  mod.rs  phi.rs
preval_api/: Cargo.toml  build.rs
preval_api/src/: lib.rs
project/: main.pv
src/: builtins.rs  builtins_old.rs  expression_parser.rs  ir.rs  ir_old.rs  main.rs  module_parser.rs  preval.rs  tokeniser.rs  typ.rs  value.rs  vm.rs  vm_old.rs
std/: print.pv
stdlib/: preval.h  print.c  print.exp  print.lib
x86_64builder/: Cargo.toml  a.out  out.s
(+37 files in other folders)
