[package]
name = "preval_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
erased-serde = "0.4.10"
indexmap = { version = "2.13.0", features = ["serde"] }
libloading = "0.8.9"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
preval_api = { path = "../preval_api" }
